--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,6 +9,8 @@
     </head>
     <body>
     <div class="page-header">
+    {% if user.is_authenticated %}
+        <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
         <h1><a href="/">Formations Valentti</a></h1>
     </div>
     <div class="content container">
