--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,6 +11,7 @@
     <div class="page-header">
     {% if user.is_authenticated %}
         <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+    {% endif %}
         <h1><a href="/">Formations Valentti</a></h1>
     </div>
     <div class="content container">
